--- a/common/sass/src/ImageGallery.css
+++ b/common/sass/src/ImageGallery.css
@@ -22,8 +22,27 @@
 }
 
 .x-gallery-empty-text {
-    color: #99bce8;
-    text-align: center;
-    vertical-align: middle;
+    /* Internet Explorer 10 */
+    display:-ms-flexbox;
+    -ms-flex-pack:center;
+    -ms-flex-align:center;
+
+    /* Firefox */
+    display:-moz-box;
+    -moz-box-pack:center;
+    -moz-box-align:center;
+
+    /* Safari, Opera, and Chrome */
+    display:-webkit-box;
+    -webkit-box-pack:center;
+    -webkit-box-align:center;
+
+    /* W3C */
+    display:box;
+    box-pack:center;
+    box-align:center;
+
+    color: #3e6fac;
     width: 100%;
+    height: 100%;
 }
